Template 2(no widescreen)

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <!-- Макети -->
     <div class="third_template">
-        <div class="header third_template_clearfix">
+        <div class="header template_clearfix">
             <a href="../index.html" class="logo">Комплексна робота №1</a>
             <div class="header-right">
                 <a href="../index.html">Макет 1</a>
@@ -23,14 +23,14 @@
             </div>
         </div>
         <!-- Хедер -->
-        <div class="header1 third_template_clearfix">
+        <div class="header1 template_clearfix">
             <div class="logo_container">
                 <img src="assets/svg/leather-icon.svg" alt="Logo" class="logo3">
             </div>
             <button class="Register_button">Реєстрація</button>
         </div>
         <!-- Осн. частина -->
-        <div class="third_template_begin third_template_clearfix">
+        <div class="third_template_begin template_clearfix">
             <div class="third_template_column third_template_image_class">
                 <img src="assets/images/female-hairdresser-arranging-her-tools.jpg" alt="image"
                     class="third_template_image">
@@ -63,7 +63,7 @@
             <button class="Register_button1">Реєстрація</button>
         </div>
         <!-- 3 інформаційні блоки -->
-        <div class="third_template_blocks third_template_clearfix">
+        <div class="third_template_blocks template_clearfix">
             <div class="third_main_box">
                 <div class="text_third_main_box">
                     <h2>Зручне розташування в Києві</h2>
@@ -114,7 +114,7 @@
             <h1 class="h11">МИ ПРОПОНУЄМО</h1>
         </div>
         <!-- 5 блоків самореклами -->
-        <div class="third_template_ads third_template_clearfix">
+        <div class="third_template_ads template_clearfix">
             <div class="third_main_box">
                 <div class="text_third_main_box2">
                     <div class="number">1</div>
@@ -175,12 +175,12 @@
                 </div>
             </div>
         </div>
-        <div class="button third_template_clearfix">
+        <div class="button template_clearfix">
             <button class="Register_button2">Реєстрація</button>
         </div>
 
         <!-- Футер -->
-        <div class="third_template_footer third_template_clearfix">
+        <div class="third_template_footer template_clearfix">
             <div class="logo_container">
                 <img src="assets/svg/leather-icon.svg" alt="Logo" class="logo3">
             </div>
