Templates 1 and 5 with phone and widescreen view

--- a/index.html
+++ b/index.html
@@ -4,211 +4,101 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Template3</title>
-    <link rel="stylesheet" href="static/styles/style.css">
-    <link rel="stylesheet" href="static/styles/template3.css">
+    <title>Template1</title>
+    <link rel="stylesheet" href="../static/styles/style.css">
+    <link rel="stylesheet" href="../static/styles/template1.css">
 </head>
 
 <body>
     <!-- Макети -->
-    <div class="third_template">
-        <div class="header template_clearfix">
-            <a href="../index.html" class="logo">Комплексна робота №1</a>
-            <div class="header-right">
-                <a href="../index.html">Макет 1</a>
-                <a href="templates/template2.html">Макет 2</a>
-                <a href="templates/template3.html">Макет 3</a>
-                <a href="templates/template4.html">Макет 4</a>
-                <a href="templates/template5.html">Макет 5</a>
-            </div>
+    <div class="header template_clearfix">
+        <a href="../index.html" class="logo">Комплексна робота №1</a>
+        <div class="header-right">
+            <a href="../index.html">Макет 1</a>
+            <a href="templates/template2.html">Макет 2</a>
+            <a href="templates/template3.html">Макет 3</a>
+            <a href="templates/template4.html">Макет 4</a>
+            <a href="templates/template5.html">Макет 5</a>
         </div>
+    </div>
+    <!-- Перший макет -->
+    <div class="first_template">
         <!-- Хедер -->
-        <div class="header1 template_clearfix">
+        <div class="head">
             <div class="logo_container">
-                <img src="assets/svg/leather-icon.svg" alt="Logo" class="logo3">
+                <img src="../assets/svg/leather-icon.svg" alt="logo" class="logo1">
+                <p class="Company">LeatherCo</p>
             </div>
-            <button class="Register_button">Реєстрація</button>
-        </div>
-        <!-- Осн. частина -->
-        <div class="third_template_begin template_clearfix">
-            <div class="third_template_column third_template_image_class">
-                <img src="assets/images/female-hairdresser-arranging-her-tools.jpg" alt="image"
-                    class="third_template_image">
-            </div>
-
-            <div class="third_template_column third_template_content">
-                <h2>Про нас</h2>
-                <p>Ласкаво просимо до Crafted Leather Co. – вашого надійного партнера у світі крафтової шкіри. Наша
-                    компанія
-                    була заснована з метою поєднати традиційне ремесло з сучасним дизайном, створюючи унікальні вироби,
-                    які
-                    відображають індивідуальність наших клієнтів.</p>
-                <p>Ми віримо, що кожен шматок шкіри має свою історію, і наша мета – перетворити цю історію в дійсність.
-                    Наша команда складається з досвідчених майстрів, які використовують тільки найякісніші матеріали,
-                    щоб
-                    створити ексклюзивні аксесуари – від гаманець і ременів до сумок і верхнього одягу.</p>
-                <p>Кожен виріб виготовляється вручну, з особливою увагою до деталей. Ми прагнемо забезпечити не лише
-                    високу
-                    якість, а й екологічну відповідальність: ми використовуємо натуральні барвники та стійкі методи
-                    обробки
-                    шкіри.</p>
-                <p>У Crafted Leather Co. ми не просто продаємо продукцію; ми створюємо предмети, які будуть служити вам
-                    багато років і стануть частиною вашого стилю життя. Наша мета – задовольнити ваші найвибагливіші
-                    потреби
-                    та надати вам унікальні рішення, які підкреслять вашу індивідуальність.</p>
-                <p>Приєднуйтесь до нашої спільноти шанувальників крафтової продукції зі шкіри і відкрийте для себе світ,
-                    де
-                    якість, стиль і екологічна свідомість йдуть пліч-о-пліч!</p>
-            </div>
-            <button class="Register_button1">Реєстрація</button>
-        </div>
-        <!-- 3 інформаційні блоки -->
-        <div class="third_template_blocks template_clearfix">
-            <div class="third_main_box">
-                <div class="text_third_main_box">
-                    <h2>Зручне розташування в Києві</h2>
-                    <p>Наша студія розташована в серці Києва, що робить її легко доступною для наших клієнтів.</p>
-                    <p>Завдяки цьому, ми можемо забезпечити швидкий і комфортний сервіс, а також
-                        проводити ексклюзивні майстер-класи та події для всіх шанувальників крафтової продукції.</p>
-                    <p>Ви завжди можете завітати до нас, щоб особисто ознайомитися з нашим асортиментом і отримати
-                        консультацію.</p>
-                </div>
-            </div>
-
-            <div class="third_main_box">
-                <div class="text_third_main_box">
-                    <h2>Співпраця з місцевими митцями</h2>
-                    <p>Ми пишаємось співпрацею з місцевими художниками та дизайнерами, які вносять свіжі ідеї у нашу
-                        продукцію.
-                    <p>
-                        Кожен наш виріб — це результат спільної творчості, де традиційні техніки поєднуються
-                        з сучасним дизайном.
-                    </p>
-                    </p>
-                    <p>Це дозволяє нам створювати унікальні та ексклюзивні вироби, які відрізняються від масового
-                        виробництва та підкреслюють індивідуальність кожного клієнта.</p>
-                </div>
-            </div>
-
-            <div class="third_main_box">
-                <div class="text_third_main_box">
-                    <h2>Впровадження екологічних практик</h2>
-                    <p>
-                        Ми зобов'язані захищати навколишнє середовище, тому Crafted Leather Co. активно впроваджує
-                        екологічні практики у виробництві.
-                    </p>
-                    <p>
-                        Ми використовуємо лише натуральні барвники та стійкі матеріали, а
-                        також дотримуємося принципів мінімізації відходів.
-                    </p>
-                    <p>
-                        Наша мета — створити продукцію, яка не тільки
-                        буде служити довго, але й матиме мінімальний вплив на природу, за що ми отримали визнання серед
-                        екосвідомих споживачів.
-                    </p>
-                </div>
-            </div>
-            <button class="Register_button2">Реєстрація</button>
-        </div>
-        <div class="Knowledge">
-            <h1 class="h11">МИ ПРОПОНУЄМО</h1>
-        </div>
-        <!-- 5 блоків самореклами -->
-        <div class="third_template_ads template_clearfix">
-            <div class="third_main_box">
-                <div class="text_third_main_box2">
-                    <div class="number">1</div>
-                    <div class="third_main_box_text2">
-                        <h2>Швидка доставка по всій Україні</h2>
-                        <p>Ми забезпечуємо швидку та надійну доставку наших виробів у будь-який куточок України. Завдяки
-                            співпраці з провідними кур’єрськими службами, ваші замовлення прибудуть вчасно та в
-                            ідеальному стані.</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="third_main_box">
-                <div class="text_third_main_box2">
-                    <div class="number">2</div>
-                    <div class="third_main_box_text2">
-                        <h2>Чесні ціни без прихованих доплат</h2>
-                        <p>Ми пропонуємо прозорі ціни на всі наші крафтові вироби. Кожен клієнт може бути впевнений, що
-                            отримує продукцію високої якості за справедливу ціну, без прихованих платежів чи націнок.
-                        </p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="third_main_box">
-                <div class="text_third_main_box2">
-                    <div class="number">3</div>
-                    <div class="third_main_box_text2">
-                        <h2>>1000 задоволених клієнтів</h2>
-                        <p>Наші вироби вже обрали понад 1000 клієнтів, які залишились задоволені якістю та
-                            ексклюзивністю продукції. Ми вдячні за довіру і прагнемо перевершувати очікування кожного
-                            нового замовника.</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="third_main_box">
-                <div class="text_third_main_box2">
-                    <div class="number">4</div>
-                    <div class="third_main_box_text2">
-                        <h2>Пропозиції та знижки</h2>
-                        <p>Ми цінуємо наших клієнтів, тому регулярно пропонуємо спеціальні знижки та акції на популярні
-                            вироби. Слідкуйте за новинами, щоб не пропустити вигідні пропозиції на ваші улюблені
-                            крафтові аксесуари.</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="third_main_box">
-                <div class="text_third_main_box2">
-                    <div class="number">5</div>
-                    <div class="third_main_box_text2">
-                        <h2>Розширення асортименту</h2>
-                        <p>Щомісяця ми додаємо нові унікальні вироби до нашої колекції. Кожен виріб створюється з
-                            натхненням і турботою, щоб ви могли знайти щось нове і особливе для себе або своїх близьких.
-                        </p>
-                    </div>
-                </div>
+            <div class="Search">
+                <label>
+                    <input type="text" placeholder="Пошук..." class="Searcher">
+                </label>
+                <button class="Search_button">
+                    <img src="../assets/svg/icons8-search.svg" alt="search" class="Search_icon">
+                </button>
             </div>
         </div>
-        <div class="button template_clearfix">
-            <button class="Register_button2">Реєстрація</button>
+        <!-- Навігаційна панель -->
+        <div class="navigation">
+            <a href="#">Домашня</a>
+            <a href="#">Партнери</a>
+            <a href="#">Про нас</a>
+            <a href="#">Доступні товари</a>
         </div>
-
-        <!-- Футер -->
-        <div class="third_template_footer template_clearfix">
-            <div class="logo_container">
-                <img src="assets/svg/leather-icon.svg" alt="Logo" class="logo3">
+        <!-- Основна частина  -->
+        <div class="content">
+            <!-- Бокова панель -->
+            <div class="sidebar">
+                <a href="#" class="h">Домашня</a>
+                <a href="#" class="h">Товари</a>
+                <a href="#" class="h">Новини</a>
+                <a href="#" class="h">Партнери</a>
+                <a href="#">Чоботи</a>
+                <a href="#">Ремні</a>
+                <a href="#">Сумки</a>
+                <a href="#">Фартуки</a>
+                <a href="#">Для годинників</a>
+                <a href="#">Візерунки</a>
+                <a href="#">Власний стиль</a>
             </div>
-            <address>
-                <ul class="third_footer_box">
-                    <li><a class="third_footer_text" href="tel:++380987589898">+380987589898</a></li>
-                    <li><a class="third_footer_text" href="mailto">Leatherclub@gmail.com</a></li>
-                    <li><a class="third_footer_text" href="https://maps.app.goo.gl/AGazLg27eHS9BgJ69" target="_blank">Ми на карті</a></li>
-                </ul>
-
-                <ul class="third_footer_box">
-                    <li><a class="third_footer_text" href="" target="_blank">Політика конфедеційності</a></li>
-                    <li><a class="third_footer_text" href="" target="_blank">FAQ (Часті питання)</a></li>
-                    <li><a class="third_footer_text">©2024 RideForge - Всі дані захищені</a></li>
-                </ul>
-
-                <ul class="third_footer_box">
-                    <li><a href="">
-                        <img src="assets/svg/icons8-facebook.svg" alt="logo" class="third_footer_svg">
-                    </a></li>
-                    <li><a href="">
-                        <img src="assets/svg/icons8-instagram.svg" alt="logo" class="third_footer_svg">
-                    </a></li>
-                    <li><a href="">
-                        <img src="assets/svg/icons8-telegram-app.svg" alt="logo" class="third_footer_svg">
-                    </a></li>
-                </ul>
-            </address>
+            <!-- Центральна -->
+            <div class="main">
+                <img src="../assets/images/tmplt1.png" alt="img" class="image1">
+                <p>LeatherCo – це компанія, що спеціалізується на створенні високоякісних крафтових виробів зі шкіри.
+                    Заснована з пристрасті до майстерності та уваги до деталей, LeatherCo зберігає традиційні техніки
+                    шкіряного ремесла, поєднуючи їх з сучасними дизайнерськими тенденціями. Кожен виріб проходить
+                    ретельний процес виготовлення, від вибору найкращих матеріалів до кінцевої обробки, яка додає
+                    виробам унікальності.</p>
+                <p>Асортимент компанії включає широкий спектр товарів: від стильних сумок і ременів до ексклюзивних
+                    чохлів для годинників, візерункових фартухів та аксесуарів для дому. Продукція LeatherCo цінується
+                    за довговічність і витончений вигляд, а кожна річ є відображенням майстерності та індивідуальності.
+                </p>
+                <br>
+                <p>LeatherCo ставить на перше місце якість та екологічність у кожному етапі створення виробів. Для
+                    компанії надзвичайно важливо використовувати лише високоякісну натуральну шкіру, отриману з
+                    відповідальних джерел, що мінімізує вплив на довкілля та сприяє сталому розвитку. Кожен продукт – це
+                    результат десятків годин копіткої праці досвідчених майстрів, які вкладають у кожну деталь частинку
+                    душі.</p>
+                <br>
+                <img src="../assets/images/tmlt11.jpg" alt="img" class="image1">
+                <p>Компанія постійно експериментує з новими ідеями та техніками, створюючи креативні моделі, що
+                    поєднують функціональність та естетику. LeatherCo також надає можливість індивідуального замовлення,
+                    де клієнти можуть обрати стиль, відтінок і деталі, створюючи продукт, що ідеально відповідає їхньому
+                    смаку.</p>
+                <p>Вироби LeatherCo – це не просто аксесуари, а справжні супутники на кожен день, які стають частиною
+                    особистої історії власника. Будь то витончений ремінь, унікальна сумка чи декоративний фартух, кожен
+                    елемент від LeatherCo додає індивідуальності образу та допомагає підкреслити стиль, що залишається
+                    актуальним на довгі роки.</p>
+            </div>
+            <!-- Бокова справа -->
+            <div class="sidebar2">
+                <a href="#" class="h">Тренди</a>
+                <a href="#">Довговічні товари</a>
+                <a href="#">Ручна робота</a>
+                <a href="#">Зручне взуття</a>
+                <a href="#">Справжня шкіра</a>
+                <a href="#">Міцні сумки</a>
+            </div>
         </div>
     </div>
 </body>
