--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Template1</title>
-    <link rel="stylesheet" href="../static/styles/style.css">
-    <link rel="stylesheet" href="../static/styles/template1.css">
+    <link rel="stylesheet" href="static/styles/style.css">
+    <link rel="stylesheet" href="static/styles/template1.css">
 </head>
 
 <body>
     <!-- Макети -->
     <div class="header template_clearfix">
-        <a href="../index.html" class="logo">Комплексна робота №1</a>
+        <a href="index.html" class="logo">Комплексна робота №1</a>
         <div class="header-right">
-            <a href="../index.html">Макет 1</a>
+            <a href="index.html">Макет 1</a>
             <a href="templates/template2.html">Макет 2</a>
             <a href="templates/template3.html">Макет 3</a>
             <a href="templates/template4.html">Макет 4</a>
@@ -26,7 +26,7 @@
         <!-- Хедер -->
         <div class="head">
             <div class="logo_container">
-                <img src="../assets/svg/leather-icon.svg" alt="logo" class="logo1">
+                <img src="assets/svg/leather-icon.svg" alt="logo" class="logo1">
                 <p class="Company">LeatherCo</p>
             </div>
             <div class="Search">
@@ -34,7 +34,7 @@
                     <input type="text" placeholder="Пошук..." class="Searcher">
                 </label>
                 <button class="Search_button">
-                    <img src="../assets/svg/icons8-search.svg" alt="search" class="Search_icon">
+                    <img src="assets/svg/icons8-search.svg" alt="search" class="Search_icon">
                 </button>
             </div>
         </div>
@@ -63,7 +63,7 @@
             </div>
             <!-- Центральна -->
             <div class="main">
-                <img src="../assets/images/tmplt1.png" alt="img" class="image1">
+                <img src="assets/images/tmplt1.png" alt="img" class="image1">
                 <p>LeatherCo – це компанія, що спеціалізується на створенні високоякісних крафтових виробів зі шкіри.
                     Заснована з пристрасті до майстерності та уваги до деталей, LeatherCo зберігає традиційні техніки
                     шкіряного ремесла, поєднуючи їх з сучасними дизайнерськими тенденціями. Кожен виріб проходить
@@ -80,7 +80,7 @@
                     результат десятків годин копіткої праці досвідчених майстрів, які вкладають у кожну деталь частинку
                     душі.</p>
                 <br>
-                <img src="../assets/images/tmlt11.jpg" alt="img" class="image1">
+                <img src="assets/images/tmlt11.jpg" alt="img" class="image1">
                 <p>Компанія постійно експериментує з новими ідеями та техніками, створюючи креативні моделі, що
                     поєднують функціональність та естетику. LeatherCo також надає можливість індивідуального замовлення,
                     де клієнти можуть обрати стиль, відтінок і деталі, створюючи продукт, що ідеально відповідає їхньому
