--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Template1</title>
-    <link rel="stylesheet" href="static/styles/style.css">
-    <link rel="stylesheet" href="static/styles/template1.css">
+    <link rel="stylesheet" href="static/styles/SASS/style.css">
+    <link rel="stylesheet" href="static/styles/SASS/template1.css">
 </head>
 
 <body>
